<resources>
    <string name="app_name">Fortun.0</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="root"><u>root</u></string>
    <string name="ohfortuna"> Has anyone realized that the purpose of the fortune cookie program is to defuse project tensions? When did you ever see a cheerful cookie, a non-cynical, or even an informative cookie? Perhaps inadvertently, we have a channel for our aggressions. This still begs the question [sic] of whether the cookie releases the pressure or only serves to blunt the warning signs. \n\n Long live the revolution!\n Have a nice day.</string>


    <string name="sOffensive">Offensive</string>
    <string name="sNormal">Normal</string>
    <string name="Sfortuna">Fortune!</string>
    <string name="next">next</string>
    <string name="prev">Prev</string>
    <string name="Sfortune">\@localhost# fortune</string>
    <string name="sSettings">Settings</string>
    <string name="title_activity_conf">conf</string>
    <string name="discalimer">Please Note: the fortune files that come with this program are a compiled from various *nix and BSD packages. I am not to blame for their content.\n\n</string>
    <string name="allowoff">Allow Offensive Fortunes</string>
    <string name="allownorm">Allow Normal Fortunes</string>
    <string name="conftitle">Settings</string>
    <string name="stcolour">Text Colour:</string>
    <string name="stsize">Text Size:</string>
    <string name="stsettingsss">Customisation \n</string>
    <string name="More">More</string>
</resources>
