<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Fortun0"
    android:id="@+id/fortune"
    android:background="@color/background_material_dark">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/root"
        android:id="@+id/root"
        android:textColor="@color/abc_search_url_text"
        android:onClick="goConf"
        android:singleLine="true"
        android:textColorLink="@color/abc_search_url_text"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Sfortune"
        android:id="@+id/Sfortune"
        android:textColor="@color/accent_material_light"
        android:onClick="goConf"
        android:layout_alignTop="@+id/root"
        android:layout_toRightOf="@+id/root"
        android:layout_toEndOf="@+id/root"
        android:clickable="true" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ohfortuna"
            android:id="@+id/ohfortunate"
            android:textIsSelectable="true"
            android:textColor="@color/primary_dark_material_light"
            android:linksClickable="true"
            android:autoText="false"
            android:nestedScrollingEnabled="true"
            android:singleLine="false"
            android:elegantTextHeight="false"
            android:textSize="21sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
        android:focusable="true"
        android:layout_below="@+id/Sfortune"
        android:layout_above="@+id/button" />


    <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev"
                android:id="@+id/prev"
                android:textColor="@color/primary_material_light"
                android:background="@color/background_material_dark"
                android:layout_alignParentBottom="true"
                android:onClick="GoGo" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sfortuna"
                    android:id="@+id/button"
                android:background="@color/background_material_dark"
                    android:textColor="@color/primary_material_light"
                    android:enabled="true"
                    android:onClick="GoGo"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/next"
                android:textColor="@color/primary_material_light"
                android:background="@color/background_material_dark"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="GoGo" />


</RelativeLayout>
