<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.abraham.fortun0.conf"
    android:background="@color/background_material_dark"
    android:clickable="true"
    android:id="@+id/confc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/conftitle"
        android:id="@+id/textView"
        android:textColor="@color/primary_material_light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allownorm"
        android:id="@+id/CKnormal"
        android:checked="true"
        android:onClick="saveInfo"
        android:clickable="true"
        android:textColor="@color/primary_material_light"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allowoff"
        android:id="@+id/CKOffensive"
        android:checked="false"
        android:onClick="saveInfo"
        android:clickable="true"
        android:textColor="@color/primary_material_light"
        android:layout_below="@+id/CKnormal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/More"
        android:id="@+id/textView3"
        android:layout_below="@+id/CKOffensive"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:autoText="false"
        android:textColor="@color/primary_material_light"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discalimer"
        android:id="@+id/textView2"
        android:textColor="@color/primary_material_light"
        android:layout_below="@+id/CKh2g2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stsettingsss"
        android:id="@+id/sSettings"
        android:textColor="@color/primary_material_light"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Change Text Size"
        android:id="@+id/ctextsize"
        android:background="@color/background_material_dark"
        android:textColor="@color/primary_material_light"
        android:onClick="showtextsizes"
        android:layout_below="@+id/sSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Text Colour"
        android:id="@+id/button2"
        android:background="@color/background_material_dark"
        android:textColor="@color/primary_material_light"
        android:onClick="showtextcolor"
        android:layout_below="@+id/ctextsize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Change Background Colour"
        android:id="@+id/button3"
        android:background="@color/background_material_dark"
        android:textColor="@color/primary_material_light"
        android:onClick="showbgcolor"
        android:layout_below="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hitchhiker&apos;s Guide"
        android:id="@+id/CKh2g2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:onClick="saveInfo"
        android:textColor="@color/primary_material_light" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Discworld"
        android:id="@+id/CKdiscworld"
        android:layout_below="@+id/CKh2g2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:onClick="saveInfo"
        android:textColor="@color/primary_material_light" />

</RelativeLayout>
